--- a/UI/scss/variables.scss
+++ b/UI/scss/variables.scss
@@ -3,5 +3,5 @@ $blue: #13212a;
 $border: #fbfbfb14;
 $white: #fff;
 $black: #000;
-$adminBackground: #ededed;
-$adminBlue: #1a2025;
+$adminBackground: #ead2c6;
+$adminBlue: #c5b8b2;
