--- a/UI/scss/global.scss
+++ b/UI/scss/global.scss
@@ -1,7 +1,7 @@
 //global
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Kanit', sans-serif;
     background: $white;
     color: $white;
     font-size: 1.1em;
