--- a/UI/styles/style.css
+++ b/UI/styles/style.css
@@ -55,7 +55,7 @@ header nav {
         font-size: 24px; } }
   header nav ul {
     max-height: 0px;
-    background: #a2958f;
+    background: #92867d;
     padding: 0;
     list-style: none;
     overflow: hidden;
@@ -101,7 +101,7 @@ header #showcase {
       height: 700px; } }
   header #showcase #bg-image {
     position: absolute;
-    background: black;
+    background: url("./../images/bg4.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -129,7 +129,7 @@ header #showcase {
           text-shadow: 1px 1px 15px #000;
           padding: 2em 0 1em 0; } }
     header #showcase .content-wrap p {
-      font-family: 'Great Vibes', cursive;
+      font-family: 'Poiret One', cursive;
       font-weight: thin;
       font-size: 1.2em; }
       @media only screen and (min-width: 700px) {
@@ -240,7 +240,7 @@ header #showcase {
 /* footer */
 #footer {
   padding: 2em;
-  background: #a2958f;
+  background: #92867d;
   color: #fff;
   font-size: 1.2em;
   text-align: center; }
@@ -291,7 +291,7 @@ button[type="submit"] {
 button[type="submit"] {
   color: #ffffff;
   height: 40px;
-  background-color: #c5b8b2;
+  background-color: #92867d;
   -webkit-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
@@ -452,7 +452,7 @@ button[type="submit"] {
     z-index: 3;
     height: 100vh;
     padding: 5em 0em;
-    background: #a2958f;
+    background: #92867d;
     text-align: center;
     -webkit-transform-origin: left;
     -ms-transform-origin: left;
@@ -531,7 +531,7 @@ button[type="submit"] {
       .container .mainboard #board table thead {
         font-weight: bold;
         text-align: center;
-        background-color: #c5b8b2; }
+        background-color: #ada29a; }
         @media only screen and (min-width: 700px) {
           .container .mainboard #board table thead {
             font-size: 16px; } }
@@ -568,7 +568,7 @@ button[type="submit"] {
         .container .mainboard #board table tbody {
           font-size: 16px; } }
       .container .mainboard #board table tbody tr:nth-child(even) {
-        background-color: rgba(65, 92, 105, 0.22); }
+        background-color: #ada29a; }
       .container .mainboard #board table tbody tr:nth-child(odd) {
         background-color: rgba(190, 124, 124, 0.075); }
       .container .mainboard #board table tr, .container .mainboard #board table td {
@@ -610,7 +610,7 @@ button[type="submit"] {
       color: #3e3b46;
       height: 40px;
       width: 25%;
-      background-color: #c5b8b2;
+      background-color: #ada29a;
       float: right;
       -webkit-transition: all 0.5s;
       -o-transition: all 0.5s;
